--- a/requirements.txt
+++ b/requirements.txt
@@ -77,8 +77,8 @@ testpath==0.4.4
 text-unidecode==1.3
 toml==0.10.1
 toolz==0.10.0
-torch==1.5.1
-torchvision==0.6.1
+# torch==1.5.1
+# torchvision==0.6.1
 tornado==6.0.4
 traitlets==4.3.3
 tzlocal==2.1
@@ -88,3 +88,5 @@ watchdog==0.10.3
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+https://download.pytorch.org/whl/cpu/torch-1.5.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
+https://download.pytorch.org/whl/cpu/torchvision-0.6.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
